P5Elearning/force-app/main/default/objects/Trail__c/fields/CantModules__c.field-meta.xml
<CustomField>
    <fullName>CantModules__c</fullName>
    <label>CantModules</label>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>