P5Elearning/force-app/main/default/objects/Trail__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time (Minutes)</label>
    <summarizedField>Trail_Module__c.Time__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>